	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.0


SIGNIFICANT USER-VISIBLE CHANGES


NEW FEATURES

    o   In table(), 'exclude=NULL' now does something also for factor
        arguments. A new 'useNA' argument allows you to control
        whether to add NA levels unconditionally or only when present
        in data. A new convenience function addNA() gives similar 
	functionality by adding NA levels to individual factors.

    o	The handling of nuls in character strings has been changed --
	they are no longer allowed, and attempting to create such a
	string now gives a truncation warning (unless
	options("warnEscapes") is false).

    o	format(), formatC() and prettyNum() gain a new argument
	'drop0trailing' which can be used to suppress trailing "0"s.

    o	Experimental setTimeLimit() function to set limits on the CPU
	and/or elapsed time for each top-level computation.

    o	The user environment and profile files can now be specified via
	environment variables 'R_ENVIRON_USER' and 'R_PROFILE_USER',
	respectively.

    o	optim(.., method="SANN", .., trace=TRUE) is now customizable via
	the 'REPORT' control argument, thanks to code proposals by
	Thomas Petzoldt.

    o	setEPS() and setPS() gain '...' to allow other arguments to be
	passed to ps.options(), including overriding 'width' and 'height'.

    o	by() gains a 'simplify' argument, passed to tapply().

    o	segments(), arrows() and rect() allow zero-length
	coordinates.  (Wish of PR#11192)

    o	pdf() has new arguments 'useDingbats' (set to FALSE for use
	with broken viewers) and 'colormodel'.	It now only references
	the ZapfDingbats font if it is used.

	The default PDF version is now 1.4, since viewers that do not
	accept that are now rare.

    o	The behaviour of readLines() for incomplete final lines on
	binary-mode connections has been changed to be like blocking
	rather than non-blocking text-mode connections.
